force-app/main/default/objects/Queue__c/Queue__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Persistent layer to store Queue</description>
    <label>Queue</label>
</CustomObject>