force-app/main/default/objects/Queue__c/fields/ContextId__c.field-meta.xml
<CustomField>
    <fullName>ContextId__c</fullName>
    <label>Context Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>