force-app/main/default/objects/Queue__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <label>Resource</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>